Raw Signup page Created

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         </div>
     {% else %}
         <div>
-            <p><a href="{% url 'login' %}">Login</a> | SignUp</p>
+            <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'signup' %}">SignUp</a></p>
         </div>
     {% endif %}
 {% endblock %}
