'crispy_forms' has been installed & signup form improved by crispy. Bootstrap4 CSS & JS cdn added to Project.

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,11 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 
 {% block page_title %}SignUp Page{% endblock %}
 {% block content %}
     <form action= '' method='post'>
         {% csrf_token %}
-        {{ form.as_p }}
+        {{form|crispy}}
         <button type="submit">SignUp Now</button>
     </form>
 {% endblock %}
