--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,9 +3,9 @@
 {% block page_title %}Login Page{% endblock %}
 
 {% block content %}
-    <form action='' method='post'>
+    <form class='mt-3' action='' method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-        <button type='submit'>Login</button>
+        <button class='btn btn-success mt-3' type='submit'>Login</button>
     </form>
 {% endblock %}
