Forgot password Link Added To Login page & password_reset_form Implemented To Get User Mail To Send Link To change password.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,4 +8,5 @@
         {{ form.as_p }}
         <button class='btn btn-success mt-3' type='submit'>Login</button>
     </form>
+    <a href='{% url 'password_reset' %}'>Forgot Password?</a>
 {% endblock %}
