--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,5 +8,5 @@
         {{ form.as_p }}
         <button class='btn btn-success mt-3' type='submit'>Login</button>
     </form>
-    <a href='{% url 'password_reset' %}'>Forgot Password?</a>
+    <a href='{% url 'password_reset' %}'>Forgot Password?</a> <b>Or</b> <a href='{% url 'signup' %}'>Create An Account</a>
 {% endblock %}
