--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,9 +3,10 @@
 
 {% block page_title %}SignUp Page{% endblock %}
 {% block content %}
-    <form action= '' method='post'>
+    <form class='mt-3' action= '' method='post'>
         {% csrf_token %}
         {{form|crispy}}
-        <button type="submit">SignUp Now</button>
+        <button class='btn btn-success' type="submit">SignUp Now</button>
     </form>
+    <a href='{% url 'password_reset' %}'>Forgot Password?</a> <b>Or</b> <a href='{% url 'login' %}'>Login To Your Account</a>
 {% endblock %}
