book detail view implemented by using generic.DetailView & Book title functionality changed like link

--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -3,6 +3,6 @@
 {% block page_title %}لیست کتاب ها{% endblock %}
 {% block content %}
     {% for book in books %}
-        <h3>{{book.title}}</h3>
+        <h3><a href="{{book.get_absolute_url}}">{{book.title}}</a></h3>
     {% endfor %}
 {% endblock %}
