--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 
-{% block page_title %}{{book.title}} details{% endblock %}
+{% block page_title %}جزئیات کتاب {{book.title}}{% endblock %}
 {% block content %}
     <h2>{{book.title}}</h2>
     <br>
