Book DeleteView Implemented & pages translation done manually.

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -5,6 +5,6 @@
     <h2>{{book.title}}</h2>
     <br>
     <p>{{book.description}}</p>
-    <b>Author: <i>{{book.author}}</i></b>
+    <b>نویسنده: {{book.title}}</b>
     <p><b>{{book.price}}</b></p>
 {% endblock %}
