--- a/books/templates/books/book_detail_update.html
+++ b/books/templates/books/book_detail_update.html
@@ -6,6 +6,6 @@
     <form class='mt-3' action='' method='post'>
         {% csrf_token %}
         {{form|crispy}}
-        <button type='submit' class='btn btn-info'>Update</button>
+        <button type='submit' class='btn btn-info'>انجام بروز رسانی</button>
     </form>
 {% endblock %}
