--- a/books/templates/books/book_creation.html
+++ b/books/templates/books/book_creation.html
@@ -8,6 +8,6 @@
         {% csrf_token %}
 
         {{form|crispy}}
-        <button type='submit' class='btn btn-success'>ایجاد</button>
+        <button type='submit' class='btn btn-success'>ایجاد کتاب</button>
     </form>
 {% endblock %}
