--- a/books/templates/books/book_detail_update.html
+++ b/books/templates/books/book_detail_update.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
 
-{% block page_title %}ویرایش کتاب {{book.title}}{% endblock %}
+{% block page_title %}ویرایش کتاب {{book.title|capfirst}}{% endblock %}
 {% block content %}
     <form class='mt-3' action='' method='post'>
         {% csrf_token %}
