--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        {% block template_styles%}{% endblock %}
 
         <title>{% block page_title %}{% endblock %}</title>
     </head>
@@ -29,18 +30,28 @@
                     <img src="icons/book.png" alt="" height="30"
                          class="d-inline-block align-text-top">
                 </a>
-                <a class="navbar-brand mx-3" href="#">کتاب یار</a>
+                <a class="navbar-brand mx-3" href="{% url 'book_list' %}">کتاب یار</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">خانه</a>
-                        <a class="nav-link" href="#">اضافه کردن کتاب</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'book_list' %}">خانه</a>
+                        <a class="nav-link" href="{% url 'book_creation' %}">اضافه کردن کتاب</a>
                     </div>
                 </div>
-                <div class="mx-2 text-white">خوش آمدی محمدهادی | <a class="link-light text-decoration-none" href="#">خروج</a></div>
+                <div class="mx-2 text-white">
+                    {% if user.is_authenticated %}
+                    خوش آمدی {{user.username}} 
+                    | 
+                    <a class="link-light text-decoration-none" href="{% url 'logout' %}">خروج</a>
+                    {% else %}
+                    <a class="link-light text-decoration-none" href="{% url 'login' %}">ورود</a>
+                    |
+                    <a class="link-light text-decoration-none" href="{% url 'signup' %}">ثبت نام</a>
+                    {% endif %}
+                </div>
             </div>
         </nav>
         <div class="container">
