--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,8 +26,8 @@
         <![endif]-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-info" dir="rtl">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="icons/book.png" alt="" height="30"
+                <a class="navbar-brand" href="{% url 'book_list' %}">
+                    <img src="{% static 'icons/book.png' %}" alt="" height="30"
                          class="d-inline-block align-text-top">
                 </a>
                 <a class="navbar-brand mx-3" href="{% url 'book_list' %}">کتاب یار</a>
