frontend files added to forgot password.

--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 
-{% block page_title %}Message{% endblock %}
+{% block page_title %}اطلاع رسانی{% endblock %}
 {% block content %}
-    <h2 class='btn-4'>Check Your Mailbox</h2>
-    <p>The <b>reset password url</b> has been sent to your mail</p>
+    <h2 class='btn-4'>لطفا ایمیل خود را بررسی نمایید</h2>
+    <p><b>لینک تغییر کلمه عبور</b> به ایمیل شما ارسال گردید</p>
 {% endblock %}
