--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,8 @@
 {% extends '_base.html' %}
 
-{% block page_title %}Message{% endblock %}
+{% block page_title %}اطلاع رسانی{% endblock %}
 {% block content %}
-    <h2 class='mt-3'>Done :)</h2>
-    <p>Password Reset <i>Successfully!</i></p>
-    <a href="{% url 'login' %}">Login from here.</a>
+    <h2 class='mt-3'>انجام شد :)</h2>
+    <p>کلمه عبور با <i>موفقیت</i> تغییر یافت</p>
+    <a href="{% url 'login' %}">ورود به حساب کاربری</a>
 {% endblock %}
