--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,12 +1,26 @@
 {% extends '_base.html' %}
+
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block page_title %}Get Mail{% endblock %}
+{% block template_styles %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock %}
+{% block page_title %}دریافت ایمیل{% endblock %}
 {% block content %}
-    <form class='mt-3' action='' method='post'>
-        {% csrf_token %}
-        {{form|crispy}}
-        <button type='submit' class='btn btn-info mt-3'>Send Mail</button>
-    </form>
-    <a href='{% url 'login' %}'>Login to your account</a>
+    <div class="d-flex justify-content-center mt-5" dir="rtl">
+        <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-xs-6 bg-white m-3 m-sm-5 border rounded px-4 pt-4 pb-3 shadow">
+            <form method="post">
+                {% csrf_token %}
+                <h3 class="text-center">فراموشی رمز عبور</h3>
+                {{form|crispy}}
+                <button type="submit" class="btn btn-success mt-3 w-100">ارسال</button>
+                <div class="align-items-center">    
+                    <a class="text-decoration-none" href="{% url 'login' %}">ورود به حساب کاربری</a>
+                    <span> یا </span>
+                    <a class="text-decoration-none" href="{% url 'signup' %}">ثبت نام</a>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
