--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load static %}
 
 {% block page_title %}جزئیات کتاب {{book.title}}{% endblock %}
 {% block content %}
@@ -9,8 +10,14 @@
                     <div class="row w-sm-75 w-100">
                         <div class="col-xs-12 col-md-3 d-flex justify-content-center">
                             <div>
-                                <img src="https://newcdn.fidibo.com/images/books/65579_50411_normal.jpg"
-                                    class="img-fluid rounded-start" alt="...">
+                                {% if book.cover %}
+                                    <img src="{{book.cover.url}}" class="img-fluid rounded-start" alt="...">
+                                {% else %}
+                                    <img src="{% static 'default_images/No_Cover_Image.jpg' %}" class="img-fluid rounded-start" alt="..."> 
+                                {% endif %}
+                                <a class="mt-2 btn btn-info" href="{% url 'book_update' book.id %}">ویرایش</a>
+                                <span>  </span>
+                                <a class="mt-2 btn btn-danger" href="{% url 'delete_book' book.id%}">حذف</a>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6 text-center text-md-end mt-md-1 mt-4">
