--- a/books/templates/books/book_detail_update.html
+++ b/books/templates/books/book_detail_update.html
@@ -3,9 +3,20 @@
 
 {% block page_title %}ویرایش کتاب {{book.title|capfirst}}{% endblock %}
 {% block content %}
-    <form class='mt-3' action='' method='post'>
-        {% csrf_token %}
-        {{form|crispy}}
-        <button type='submit' class='btn btn-info'>انجام بروز رسانی</button>
-    </form>
+<div class="container mt-4" dir="rtl">
+    <div class="row">
+        <div class="col-9">
+            <div class="card shadow my-3">
+                <h5 class="card-header bg-success text-light px-5">فرم ویرایش</h5>
+                <div class="px-5 pt-3 pb-5">
+                    <form method="POST" enctype='multipart/form-data'>
+                        {% csrf_token %}
+                        {{form|crispy}}
+                        <button type="submit" class="btn btn-success mt-2">اعمال تغییرات</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
