--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -30,9 +30,25 @@
         </div>
     </div>
 
+    {% comment %} bootstrap-V4 paginatioin {% endcomment %}
+    <nav aria-label="Page navigation example">
+        <ul class="mt-5  pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">{{page_obj.previous_page_number}}</a></li>
+            {% endif %}
+            <li class="page-item active"><a class="page-link" href="?page={{page_obj.number}}">{{page_obj.number}}</a>{{page.number}}</li>
+            {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">{{page_obj.next_page_number}}</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
     <footer class="bg-light text-center text-lg-start mt-5">
     <div class="text-center bg-grey">
         <p>دوره آموزشی جنگو <a class="text-dark" href="https://codingyar.com/" target="_blank">کدینگ یار</a></p>
     </div>
     </footer>
+
 {% endblock %}
