--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -44,14 +44,21 @@
                     <div class="card shadow my-3 p-5 w-sm-75 w-100">
                         <h2 class="mb-5">نظرات:</h2>
                         {% for comment in comments %}
+                            {% if comment.is_active %}
                             <div class="border-bottom mb-3">
                                 <h5 class="mb-3">{{comment.user.username}}</h5>
                                 <p>{{comment.text|linebreaks}}</p>
+                                {% if comment.recommend %}
+                                    <span class="bg-light text-success"> این کتاب را <b>توصیه می کنم</b></span>
+                                {% else %}
+                                    <span class="bg-light text-danger"> این کتاب را <b>توصیه نمی کنم</b></span>
+                                {% endif %}
                             </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 </div>
-
+                
                 <div class="d-flex justify-content-center">
                     <div class="card shadow my-3 p-5 w-sm-75 w-100">
                         <h3>نظر خود را وارد کنید:</h3>
